# rust-DBR

./: Cargo.toml
examples/: artist.rs  insert.rs
rust-dbr/: Cargo.toml
rust-dbr-macros/: Cargo.toml
rust-dbr-macros/examples/: artist.rs  state.rs
rust-dbr-macros/src/: lib.rs
rust-dbr-macros/src/expand/: derive_table.rs  fetch.rs  mod.rs
rust-dbr-macros/src/expand/fetch/: fetch.rs  keyword.rs  limit.rs  mod.rs  order_by.rs  where.rs
rust-dbr/examples/: artist.rs  sandbox.rs
rust-dbr/src/: cache.rs  context.rs  error.rs  filter.rs  instance.rs  lib.rs  main.rs  metadata.rs  model.rs  table.rs
rust-dbr/src/config/: instance.rs
rust-dbr/src/conn/: mod.rs
rust-dbr/src/query/: insert.rs  mod.rs  queryable.rs  select.rs
src/: lib.rs  main.rs
src/config/: instance.rs  mod.rs
src/query/: insert.rs  mod.rs  queryable.rs  select.rs
