[package]
name = "rust-dbr-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
rust-dbr = { path = "../rust-dbr" }

syn = { version = "1.0.52", features = ["full", "extra-traits", "derive"] }
quote = "1.0.7"
proc-macro2 = "1.0"

sqlx = { path = "../../sqlx", version = "0.5.11", features = ["any", "mysql", "sqlite", "runtime-tokio-rustls"] }
lazy_static = "1.4"
async-trait = "0.1.52"
futures = "0.3"
tokio = { version = "1.17", features = ["full"] }
