[package]
name = "rust-dbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "22.1.0"
mysql_async = "0.29"
sqlite = "0.26.0"
lazy_static = "1.4"
async-trait = "0.1.52"
futures = "0.3"
tokio = { version = "1.17", features = ["full"] }