[package]
name = "rust-dbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
async-trait = "0.1.52"
futures = "0.3"
tokio = { version = "1.17", features = ["full"] }
sqlx = { path = "../../sqlx", version = "0.5.11", features = ["any", "mysql", "sqlite", "runtime-tokio-rustls"] }
derive_more = "0.99.17"